Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/rare/Rare6.out
Rare6.java:19:13: compiler.err.non-static.cant.be.ref: kindname.class, rare6.A.B
1 error
